수업 관리자 등록 완료

--- a/src/main/java/cse/sms/view/SM_ClassManagerMenu.form
+++ b/src/main/java/cse/sms/view/SM_ClassManagerMenu.form
@@ -59,6 +59,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="&#xb4f1;&#xb85d;"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton2">
       <Properties>
