--- a/src/main/java/cse/sms/view/PF_Input_Grade.form
+++ b/src/main/java/cse/sms/view/PF_Input_Grade.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
@@ -134,6 +134,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="&#xb4a4;&#xb85c;"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButt_BackActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButt_Input">
       <Properties>
